# llama-agent

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  download-manager.py  download-monitor.py  entrypoint.sh  get-model-context.py  model-manager.sh  sync-llama-cpp.sh  system-status.py  update-status.sh
.devops/: cuda-new.Dockerfile
.github/: README.md
.github/workflows/: release-agent.yml
common/: chat.cpp  console.cpp  console.h  json-schema-to-grammar.cpp
tools/: CMakeLists.txt
tools/agent/: CMakeLists.txt  README.md  agent-loop.cpp  agent-loop.h  agent.cpp  permission-async.cpp  permission-async.h  permission.cpp  permission.h  prompt.txt  tool-registry.cpp  tool-registry.h
tools/agent/agents-md/: agents-md-manager.cpp  agents-md-manager.h
tools/agent/mcp/: mcp-client.cpp  mcp-client.h  mcp-server-manager.cpp  mcp-server-manager.h  mcp-tool-wrapper.cpp  mcp-tool-wrapper.h
tools/agent/server/: agent-routes.cpp  agent-routes.h  agent-server.cpp  agent-session.cpp  agent-session.h
tools/agent/skills/: skills-manager.cpp  skills-manager.h
tools/agent/subagent/: subagent-display.cpp  subagent-display.h  subagent-output.cpp  subagent-output.h  subagent-runner.cpp  subagent-runner.h  subagent-types.cpp  subagent-types.h
tools/agent/tools/: tool-bash.cpp  tool-edit.cpp  tool-glob.cpp  tool-read.cpp  tool-task.cpp  tool-write.cpp
tools/server/: server-context.cpp  server-task.h
tools/server/webui/src/lib/components/app/models/: ModelsSelector.svelte
ui/: .dockerignore  CLAUDE.md  Dockerfile  drizzle.config.ts  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
ui/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
ui/.svelte-kit/output/server/: index.js  manifest-full.js
ui/.svelte-kit/output/server/.vite/: manifest.json
ui/.svelte-kit/output/server/_app/immutable/assets/: _layout.CZqnoqGt.css  _layout.Dp71c3rw.css
ui/.svelte-kit/output/server/chunks/: config.js  context.js  hardware.js  index.js  index2.js  internal.js
ui/.svelte-kit/output/server/entries/endpoints/api/config/: _server.ts.js
ui/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
ui/.svelte-kit/types/: route_meta_data.json
ui/.svelte-kit/types/src/routes/api/config/: $types.d.ts
ui/.svelte-kit/types/src/routes/api/db/messages/: $types.d.ts
ui/.svelte-kit/types/src/routes/api/db/servers/: $types.d.ts
ui/.svelte-kit/types/src/routes/api/db/sessions/: $types.d.ts
ui/.svelte-kit/types/src/routes/api/models/[id]/: $types.d.ts
ui/.svelte-kit/types/src/routes/api/models/download/: $types.d.ts
ui/.svelte-kit/types/src/routes/api/models/search/: $types.d.ts
ui/src/: app.css  app.html
ui/src/lib/: api.ts  types.ts
ui/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  ModelMarketplace.svelte  PermissionDialog.svelte  ServerDialog.svelte  ServerSelector.svelte  SystemStatus.svelte
ui/src/lib/server/: config.ts  hardware.ts
ui/src/lib/server/db/: index.ts  schema.ts
ui/src/lib/stores/: servers.svelte.ts  sessions.svelte.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/api/config/: +server.ts
ui/src/routes/api/db/messages/: +server.ts
ui/src/routes/api/db/servers/: +server.ts
ui/src/routes/api/db/sessions/: +server.ts
ui/src/routes/api/db/sessions/generate-title/: +server.ts
ui/src/routes/api/models/[id]/: +server.ts
ui/src/routes/api/models/download/: +server.ts
ui/src/routes/api/models/search/: +server.ts
ui/src/routes/api/system/hardware/: +server.ts
ui/src/routes/api/system/models/: +server.ts
ui/src/routes/api/system/status/: +server.ts
ui/src/routes/api/system/switch-model/: +server.ts
(+16 files in other folders)
